--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
-<!-- <app-contador></app-contador> -->
+<app-contador></app-contador>
 
 <!-- <app-heroe></app-heroe> -->
 
-<app-listado></app-listado>
+<!-- <app-listado></app-listado> -->
