antes de depuracion

--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -11,8 +11,8 @@
 
     <div class="col">
         <app-agregar 
-            [personajes]="personajes"
             [nuevo]="nuevo"
+            (onNuevoPersonaje)="agregarNuevoPersonaje( $event )"
         ></app-agregar>
     </div>
 
