--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -6,14 +6,11 @@
 <div class="row">
     
     <div class="col">
-        <app-personajes [personajes]="personajes"></app-personajes>
+        <app-personajes></app-personajes>
     </div>
 
     <div class="col">
-        <app-agregar 
-            [nuevo]="nuevo"
-            (onNuevoPersonaje)="agregarNuevoPersonaje( $event )"
-        ></app-agregar>
+        <app-agregar [nuevo]="nuevo"></app-agregar>
     </div>
 
 
